# python-template

./: .coverage  .dockerignore  .env.example  .env.jinja  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Dockerfile.celery  Dockerfile.jinja  README.md  copier.yml  docker-compose-test.yaml  docker-compose.override.yaml  docker-compose.test.yaml  docker-compose.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pyproject.toml.jinja  requirements.txt
.copier/: update_dotenv.py
.cursor/: logging.mdc  modular-design-principles.mdc  structured-import-order.mdc  type-hinting.mdc
.devcontainer/: .env.example  Dockerfile  aliases-devcontainer  devcontainer-create.sh  devcontainer-start.sh  devcontainer.json  devcontainer.json.jinja  docker-compose.yaml  docker-compose.yaml.jinja
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/worflows/: python-app.yml
.github/workflows/: python-app.yml  python-app.yml.jinja
app/api/: server.py
scripts/: exec.sh  format.sh  makemigrations.sh  migrate.sh  rename-template.py  test.sh
src/: .env.example  Dockerfile  admin.py  alembic.ini  logging.py  main.py  middlewares.py  requirements.txt  urls.py
src/alembic/: env.py
src/alembic/versions/: 2023-07-12-5d07fd610995_.py  2023-07-14-e9bd7c60fa81_.py  2025-03-24-babbbc01361e_test_migrations.py
src/api/: dependencies.py
src/api/v1/: router.py
src/api/v1/routers/: item.py  task.py  user.py
src/api/v1/schemas/: __init__.py  item.py  task.py  token.py  user.py
src/app/: main.py
src/app/api/: main.py
src/app/api/dependencies/: database.py
src/app/api/routes/: __init__.py  users.py
src/app/core/: config.py  models.py
src/app/db/: tasks.py
src/app/db/migrations/: script.py.mako
src/app/db/repositories/: users.py
src/app/heroes/: models.py
src/app/user/: crud.py  models.py
src/controllers/: __init__.py  item.py  user.py
src/core/: config.py  database.py  security.py  trace.py
src/helpers/: casing.py  dates.py  shell.py  sql.py
src/migrations/: env.py
src/migrations/versions/: 18c4b1d40d91_added_heroes_table.py  b22ca67e3d67_added_user_table.py
src/models/: item.py  user.py
src/task_queue/: celery_worker.py  task.py
src/tests/: base.py  conftest.py  test_main.py  test_user.py
